--- a/notebooks/lr_ensemble-all.ipynb
+++ b/notebooks/lr_ensemble-all.ipynb
@@ -10,20 +10,36 @@
      "output_type": "stream",
      "text": [
       "'../features/cnn_1_aug1_feat.pkl',\n",
+      "'../features/cnn_1_aug_1_fold8_feat.pkl',\n",
       "'../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_1_aug_skimage_denoise_feat.pkl',\n",
+      "'../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/cnn_1_feat.pkl',\n",
       "'../features/cnn_2_aug1_feat.pkl',\n",
+      "'../features/cnn_2_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_2_aug_denoise_preprocess_feat.pkl',\n",
       "'../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/cnn_2_feat.pkl',\n",
       "'../features/cnn_3_aug1_feat.pkl',\n",
+      "'../features/cnn_3_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_3_aug_denoise_preprocess_feat.pkl',\n",
       "'../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/cnn_4_aug1_feat.pkl',\n",
       "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
+      "'../features/cnn_4_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_4_aug_denoise_preprocess_feat.pkl',\n",
       "'../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/cnn_5_aug1_feat.pkl',\n",
+      "'../features/cnn_5_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_5_aug_denoise_preprocess_feat.pkl',\n",
       "'../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/incept_1_feat.pkl',\n",
       "'../features/incept_aug1_feat.pkl',\n",
+      "'../features/incept_aug1_fold8_feat.pkl',\n",
       "'../features/incept_aug2_feat.pkl',\n",
       "'../features/incept_aug3_feat.pkl',\n",
       "'../features/incept_aug4_feat.pkl',\n",
@@ -34,7 +50,10 @@
       "'../features/resnet_aug3_feat.pkl',\n",
       "'../features/resnet_aug4_feat.pkl',\n",
       "'../features/vgg16_1_feat.pkl',\n",
-      "'../features/vgg_aug1_feat.pkl',\n"
+      "'../features/vgg_aug1_feat.pkl',\n",
+      "'../features/vgg_aug1_fold8_feat.pkl',\n",
+      "'../features/vgg_aug1_new_feat.pkl',\n",
+      "'../features/xception_aug1_feat.pkl',\n"
      ]
     }
    ],
@@ -60,20 +79,36 @@
      "output_type": "stream",
      "text": [
       "../features/cnn_1_aug1_feat.pkl\n",
+      "../features/cnn_1_aug_1_fold8_feat.pkl\n",
       "../features/cnn_1_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_1_aug_skimage_denoise_feat.pkl\n",
+      "../features/cnn_1_aug_skimage_preprocess_feat.pkl\n",
       "../features/cnn_1_feat.pkl\n",
       "../features/cnn_2_aug1_feat.pkl\n",
+      "../features/cnn_2_aug_1_fold8_feat.pkl\n",
+      "../features/cnn_2_aug_denoise_preprocess_feat.pkl\n",
       "../features/cnn_2_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_2_aug_skimage_preprocess_feat.pkl\n",
       "../features/cnn_2_feat.pkl\n",
       "../features/cnn_3_aug1_feat.pkl\n",
+      "../features/cnn_3_aug_1_fold8_feat.pkl\n",
+      "../features/cnn_3_aug_denoise_preprocess_feat.pkl\n",
       "../features/cnn_3_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_3_aug_skimage_preprocess_feat.pkl\n",
       "../features/cnn_4_aug1_feat.pkl\n",
       "../features/cnn_4_aug1_feat_add_early.pkl\n",
+      "../features/cnn_4_aug_1_fold8_feat.pkl\n",
+      "../features/cnn_4_aug_denoise_preprocess_feat.pkl\n",
       "../features/cnn_4_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_4_aug_skimage_preprocess_feat.pkl\n",
       "../features/cnn_5_aug1_feat.pkl\n",
+      "../features/cnn_5_aug_1_fold8_feat.pkl\n",
+      "../features/cnn_5_aug_denoise_preprocess_feat.pkl\n",
       "../features/cnn_5_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_5_aug_skimage_preprocess_feat.pkl\n",
       "../features/incept_1_feat.pkl\n",
       "../features/incept_aug1_feat.pkl\n",
+      "../features/incept_aug1_fold8_feat.pkl\n",
       "../features/incept_aug2_feat.pkl\n",
       "../features/incept_aug3_feat.pkl\n",
       "../features/incept_aug4_feat.pkl\n",
@@ -85,7 +120,10 @@
       "../features/resnet_aug4_feat.pkl\n",
       "../features/vgg16_1_feat.pkl\n",
       "../features/vgg_aug1_feat.pkl\n",
-      "(1604, 36) (8424, 36) (1604,)\n"
+      "../features/vgg_aug1_fold8_feat.pkl\n",
+      "../features/vgg_aug1_new_feat.pkl\n",
+      "../features/xception_aug1_feat.pkl\n",
+      "(1604, 55) (8424, 55) (1604,)\n"
      ]
     }
    ],
@@ -119,7 +157,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.155856322674\n"
+      "0.139582545711\n",
+      "0.139631757926\n",
+      "0.140019103266\n"
      ]
     }
    ],
@@ -129,7 +169,9 @@
     "lr_m = LogisticRegression()\n",
     "lr_m.fit(train_x,train_y)\n",
     "train_pred = lr_m.predict_proba(train_x)\n",
-    "print(log_loss(train_y,train_pred))"
+    "print(log_loss(train_y,train_pred))\n",
+    "print(log_loss(train_y,np.clip(train_pred,0.001,0.999)))\n",
+    "print(log_loss(train_y,np.clip(train_pred,0.005,0.995)))"
    ]
   },
   {
@@ -142,11 +184,11 @@
      "output_type": "stream",
      "text": [
       "         id  is_iceberg\n",
-      "0  5941774d    0.034235\n",
-      "1  4023181e    0.886409\n",
-      "2  b20200e4    0.011205\n",
-      "3  e7f018bb    0.985497\n",
-      "4  4371c8c3    0.478162\n"
+      "0  5941774d    0.011616\n",
+      "1  4023181e    0.863282\n",
+      "2  b20200e4    0.002731\n",
+      "3  e7f018bb    0.987540\n",
+      "4  4371c8c3    0.739067\n"
      ]
     }
    ],
