--- a/notebooks/lr_ensemble.ipynb
+++ b/notebooks/lr_ensemble.ipynb
@@ -2,9 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'../features/cnn_1_aug1_feat.pkl',\n",
+      "'../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_1_feat.pkl',\n",
+      "'../features/cnn_2_aug1_feat.pkl',\n",
+      "'../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_feat.pkl',\n",
+      "'../features/cnn_3_aug1_feat.pkl',\n",
+      "'../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug1_feat.pkl',\n",
+      "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
+      "'../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug1_feat.pkl',\n",
+      "'../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/incept_1_feat.pkl',\n",
+      "'../features/incept_aug1_feat.pkl',\n",
+      "'../features/incept_aug2_feat.pkl',\n",
+      "'../features/incept_aug3_feat.pkl',\n",
+      "'../features/incept_aug4_feat.pkl',\n",
+      "'../features/other_feat.pkl',\n",
+      "'../features/resnet_1_feat.pkl',\n",
+      "'../features/resnet_aug1_feat.pkl',\n",
+      "'../features/resnet_aug2_feat.pkl',\n",
+      "'../features/resnet_aug3_feat.pkl',\n",
+      "'../features/resnet_aug4_feat.pkl',\n",
+      "'../features/vgg16_1_feat.pkl',\n",
+      "'../features/vgg_aug1_feat.pkl',\n",
+      "'../features/xception_aug1_feat.pkl',\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -19,17 +58,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../features/cnn_1_aug1_feat.pkl\n",
+      "../features/cnn_1_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_1_aug_skimage_preprocess_feat.pkl\n",
+      "../features/cnn_1_feat.pkl\n",
+      "../features/cnn_2_aug1_feat.pkl\n",
+      "../features/cnn_3_aug_skimage_preprocess_feat.pkl\n",
+      "../features/cnn_4_aug1_feat.pkl\n",
+      "../features/cnn_4_aug_skimage_preprocess_feat.pkl\n",
+      "../features/cnn_5_aug_skimage_preprocess_feat.pkl\n",
+      "../features/incept_1_feat.pkl\n",
+      "../features/incept_aug1_feat.pkl\n",
+      "../features/other_feat.pkl\n",
+      "../features/resnet_1_feat.pkl\n",
+      "../features/resnet_aug1_feat.pkl\n",
+      "../features/resnet_aug4_feat.pkl\n",
+      "../features/vgg_aug1_feat.pkl\n",
+      "../features/xception_aug1_feat.pkl\n",
+      "(1604, 27) (8424, 27) (1604,)\n"
+     ]
+    }
+   ],
    "source": [
     "choose_fl = [\n",
-    "'../features/other_feat.pkl',\n",
-    "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
-    "'../features/cnn_5_aug1_feat.pkl',\n",
-    "'../features/incept_aug1_feat.pkl',\n",
-    "'../features/cnn_1_aug1_feat.pkl',\n",
-    "\n",
+    " '../features/cnn_1_aug1_feat.pkl',\n",
+    " '../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
+    " '../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
+    " '../features/cnn_1_feat.pkl',\n",
+    " '../features/cnn_2_aug1_feat.pkl',\n",
+    "# '../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+    "# '../features/cnn_2_aug_skimage_preprocess_feat.pkl',\n",
+    "# '../features/cnn_2_feat.pkl',\n",
+    "# '../features/cnn_3_aug1_feat.pkl',\n",
+    "# '../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
+    " '../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
+    " '../features/cnn_4_aug1_feat.pkl',\n",
+    "# '../features/cnn_4_aug1_feat_add_early.pkl',\n",
+    "# '../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
+    " '../features/cnn_4_aug_skimage_preprocess_feat.pkl',\n",
+    "# '../features/cnn_5_aug1_feat.pkl',\n",
+    "# '../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
+    " '../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
+    " '../features/incept_1_feat.pkl',\n",
+    " '../features/incept_aug1_feat.pkl',\n",
+    "# '../features/incept_aug2_feat.pkl',\n",
+    "# '../features/incept_aug3_feat.pkl',\n",
+    "# '../features/incept_aug4_feat.pkl',\n",
+    " '../features/other_feat.pkl',\n",
+    " '../features/resnet_1_feat.pkl',\n",
+    " '../features/resnet_aug1_feat.pkl',\n",
+    "# '../features/resnet_aug2_feat.pkl',\n",
+    "# '../features/resnet_aug3_feat.pkl',\n",
+    " '../features/resnet_aug4_feat.pkl',\n",
+    "# '../features/vgg16_1_feat.pkl',\n",
+    " '../features/vgg_aug1_feat.pkl',\n",
+    " '../features/xception_aug1_feat.pkl',\n",
     "]\n",
     "\n",
     "def load_x_y():\n",
@@ -52,25 +142,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.150869880584\n",
+      "0.150912477172\n",
+      "0.151255727198\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "lr_m = LogisticRegression()\n",
     "lr_m.fit(train_x,train_y)\n",
     "train_pred = lr_m.predict_proba(train_x)\n",
     "from sklearn.metrics import log_loss\n",
-    "print(log_loss(train_y,train_pred))"
+    "print(log_loss(train_y,train_pred))\n",
+    "print(log_loss(train_y,np.clip(train_pred,0.001,0.999)))\n",
+    "print(log_loss(train_y,np.clip(train_pred,0.005,0.995)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         id  is_iceberg\n",
+      "0  5941774d    0.018219\n",
+      "1  4023181e    0.933798\n",
+      "2  b20200e4    0.020080\n",
+      "3  e7f018bb    0.990468\n",
+      "4  4371c8c3    0.899914\n"
+     ]
+    }
+   ],
    "source": [
     "test_df=pd.read_json('../input/test.json')\n",
     "submission = pd.DataFrame()\n",
