--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -10,31 +10,51 @@
      "output_type": "stream",
      "text": [
       "'../features/cnn_1_aug1_feat.pkl'\n",
+      "'../features/cnn_1_aug_1_fold8_feat.pkl'\n",
       "'../features/cnn_1_aug_rescale_preprocess_feat.pkl'\n",
+      "'../features/cnn_1_aug_skimage_denoise_feat.pkl'\n",
+      "'../features/cnn_1_aug_skimage_preprocess_feat.pkl'\n",
       "'../features/cnn_1_feat.pkl'\n",
       "'../features/cnn_2_aug1_feat.pkl'\n",
+      "'../features/cnn_2_aug_1_fold8_feat.pkl'\n",
+      "'../features/cnn_2_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_2_aug_rescale_preprocess_feat.pkl'\n",
+      "'../features/cnn_2_aug_skimage_preprocess_feat.pkl'\n",
       "'../features/cnn_2_feat.pkl'\n",
       "'../features/cnn_3_aug1_feat.pkl'\n",
+      "'../features/cnn_3_aug_1_fold8_feat.pkl'\n",
+      "'../features/cnn_3_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_3_aug_rescale_preprocess_feat.pkl'\n",
+      "'../features/cnn_3_aug_skimage_preprocess_feat.pkl'\n",
       "'../features/cnn_4_aug1_feat.pkl'\n",
       "'../features/cnn_4_aug1_feat_add_early.pkl'\n",
+      "'../features/cnn_4_aug_1_fold8_feat.pkl'\n",
+      "'../features/cnn_4_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_4_aug_rescale_preprocess_feat.pkl'\n",
+      "'../features/cnn_4_aug_skimage_preprocess_feat.pkl'\n",
       "'../features/cnn_5_aug1_feat.pkl'\n",
+      "'../features/cnn_5_aug_1_fold8_feat.pkl'\n",
+      "'../features/cnn_5_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_5_aug_rescale_preprocess_feat.pkl'\n",
+      "'../features/cnn_5_aug_skimage_preprocess_feat.pkl'\n",
       "'../features/incept_1_feat.pkl'\n",
       "'../features/incept_aug1_feat.pkl'\n",
+      "'../features/incept_aug1_fold8_feat.pkl'\n",
       "'../features/incept_aug2_feat.pkl'\n",
       "'../features/incept_aug3_feat.pkl'\n",
       "'../features/incept_aug4_feat.pkl'\n",
       "'../features/other_feat.pkl'\n",
       "'../features/resnet_1_feat.pkl'\n",
       "'../features/resnet_aug1_feat.pkl'\n",
+      "'../features/resnet_aug1_fold8_feat.pkl'\n",
       "'../features/resnet_aug2_feat.pkl'\n",
       "'../features/resnet_aug3_feat.pkl'\n",
       "'../features/resnet_aug4_feat.pkl'\n",
       "'../features/vgg16_1_feat.pkl'\n",
-      "'../features/vgg_aug1_feat.pkl'\n"
+      "'../features/vgg_aug1_feat.pkl'\n",
+      "'../features/vgg_aug1_fold8_feat.pkl'\n",
+      "'../features/vgg_aug1_new_feat.pkl'\n",
+      "'../features/xception_aug1_feat.pkl'\n"
      ]
     }
    ],
@@ -52,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 36) (8424, 36) (1604,)\n"
+      "(1604, 56) (8424, 56) (1604,)\n"
      ]
     }
    ],
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
@@ -180,40 +200,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.638398\tvalid-logloss:0.643453\n",
+      "[0]\ttrain-logloss:0.637037\tvalid-logloss:0.640462\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[84]\ttrain-logloss:0.08021\tvalid-logloss:0.172183\n",
+      "[131]\ttrain-logloss:0.044452\tvalid-logloss:0.160958\n",
       "\n",
-      "[0]\ttrain-logloss:0.639398\tvalid-logloss:0.640432\n",
+      "[0]\ttrain-logloss:0.637773\tvalid-logloss:0.640521\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[125]\ttrain-logloss:0.061936\tvalid-logloss:0.170911\n",
+      "[92]\ttrain-logloss:0.067027\tvalid-logloss:0.164897\n",
       "\n",
-      "[0]\ttrain-logloss:0.639719\tvalid-logloss:0.639525\n",
+      "[0]\ttrain-logloss:0.637336\tvalid-logloss:0.63899\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[80]\ttrain-logloss:0.091392\tvalid-logloss:0.167787\n",
+      "[82]\ttrain-logloss:0.073132\tvalid-logloss:0.17032\n",
       "\n",
-      "local average valid loss 0.174422652688 val loss std 0.00242673360562\n",
+      "local average valid loss 0.169251661052 val loss std 0.0059555521926\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.022542\n",
-      "1  4023181e    0.861197\n",
-      "2  b20200e4    0.029474\n",
-      "3  e7f018bb    0.997296\n",
-      "4  4371c8c3    0.160665\n",
+      "0  5941774d    0.013630\n",
+      "1  4023181e    0.943625\n",
+      "2  b20200e4    0.034760\n",
+      "3  e7f018bb    0.997943\n",
+      "4  4371c8c3    0.180082\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.022839\n",
-      "1  4023181e    0.861831\n",
-      "2  b20200e4    0.029813\n",
-      "3  e7f018bb    0.997298\n",
-      "4  4371c8c3    0.161904\n"
+      "0  5941774d    0.013585\n",
+      "1  4023181e    0.942700\n",
+      "2  b20200e4    0.033894\n",
+      "3  e7f018bb    0.997963\n",
+      "4  4371c8c3    0.178451\n"
      ]
     }
    ],
@@ -223,61 +243,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.638881\tvalid-logloss:0.644057\n",
+      "[0]\ttrain-logloss:0.637737\tvalid-logloss:0.641389\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[85]\ttrain-logloss:0.085495\tvalid-logloss:0.183752\n",
+      "[85]\ttrain-logloss:0.075987\tvalid-logloss:0.159165\n",
       "\n",
-      "[0]\ttrain-logloss:0.639651\tvalid-logloss:0.642653\n",
+      "[0]\ttrain-logloss:0.63772\tvalid-logloss:0.639149\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[205]\ttrain-logloss:0.041422\tvalid-logloss:0.14161\n",
+      "[103]\ttrain-logloss:0.067981\tvalid-logloss:0.140546\n",
       "\n",
-      "[0]\ttrain-logloss:0.639546\tvalid-logloss:0.641129\n",
+      "[0]\ttrain-logloss:0.63693\tvalid-logloss:0.638803\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[113]\ttrain-logloss:0.068945\tvalid-logloss:0.199612\n",
+      "[80]\ttrain-logloss:0.073215\tvalid-logloss:0.19237\n",
       "\n",
-      "[0]\ttrain-logloss:0.640131\tvalid-logloss:0.641364\n",
+      "[0]\ttrain-logloss:0.638264\tvalid-logloss:0.640832\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[128]\ttrain-logloss:0.065329\tvalid-logloss:0.152875\n",
+      "[120]\ttrain-logloss:0.056504\tvalid-logloss:0.145793\n",
       "\n",
-      "[0]\ttrain-logloss:0.639924\tvalid-logloss:0.640402\n",
+      "[0]\ttrain-logloss:0.637983\tvalid-logloss:0.640589\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[61]\ttrain-logloss:0.112036\tvalid-logloss:0.161372\n",
+      "[74]\ttrain-logloss:0.084062\tvalid-logloss:0.168754\n",
       "\n",
-      "local average valid loss 0.169693937907 val loss std 0.0213117584252\n",
+      "local average valid loss 0.163954727952 val loss std 0.0188310130132\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.024325\n",
-      "1  4023181e    0.902789\n",
-      "2  b20200e4    0.039840\n",
-      "3  e7f018bb    0.997576\n",
-      "4  4371c8c3    0.166235\n",
+      "0  5941774d    0.013003\n",
+      "1  4023181e    0.922163\n",
+      "2  b20200e4    0.027677\n",
+      "3  e7f018bb    0.997675\n",
+      "4  4371c8c3    0.227791\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.024080\n",
-      "1  4023181e    0.904678\n",
-      "2  b20200e4    0.041006\n",
-      "3  e7f018bb    0.997627\n",
-      "4  4371c8c3    0.173510\n"
+      "0  5941774d    0.013203\n",
+      "1  4023181e    0.921438\n",
+      "2  b20200e4    0.026823\n",
+      "3  e7f018bb    0.997715\n",
+      "4  4371c8c3    0.236289\n"
      ]
     }
    ],
@@ -287,96 +307,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.638387\tvalid-logloss:0.643955\n",
+      "[0]\ttrain-logloss:0.637348\tvalid-logloss:0.639638\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[118]\ttrain-logloss:0.070075\tvalid-logloss:0.200934\n",
+      "[104]\ttrain-logloss:0.065473\tvalid-logloss:0.178839\n",
       "\n",
-      "[0]\ttrain-logloss:0.639031\tvalid-logloss:0.641597\n",
+      "[0]\ttrain-logloss:0.63846\tvalid-logloss:0.639136\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[119]\ttrain-logloss:0.074503\tvalid-logloss:0.150752\n",
+      "[128]\ttrain-logloss:0.05689\tvalid-logloss:0.145799\n",
       "\n",
-      "[0]\ttrain-logloss:0.639539\tvalid-logloss:0.640894\n",
+      "[0]\ttrain-logloss:0.638586\tvalid-logloss:0.641752\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[126]\ttrain-logloss:0.067473\tvalid-logloss:0.159865\n",
+      "[222]\ttrain-logloss:0.028512\tvalid-logloss:0.136012\n",
       "\n",
-      "[0]\ttrain-logloss:0.639553\tvalid-logloss:0.640654\n",
+      "[0]\ttrain-logloss:0.638349\tvalid-logloss:0.637826\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[166]\ttrain-logloss:0.056543\tvalid-logloss:0.112712\n",
+      "[191]\ttrain-logloss:0.037472\tvalid-logloss:0.113692\n",
       "\n",
-      "[0]\ttrain-logloss:0.63907\tvalid-logloss:0.642722\n",
+      "[0]\ttrain-logloss:0.637836\tvalid-logloss:0.640585\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[58]\ttrain-logloss:0.112296\tvalid-logloss:0.217283\n",
+      "[55]\ttrain-logloss:0.101005\tvalid-logloss:0.200728\n",
       "\n",
-      "[0]\ttrain-logloss:0.639347\tvalid-logloss:0.641854\n",
+      "[0]\ttrain-logloss:0.638405\tvalid-logloss:0.638111\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[162]\ttrain-logloss:0.055967\tvalid-logloss:0.15669\n",
+      "[105]\ttrain-logloss:0.070403\tvalid-logloss:0.153394\n",
       "\n",
-      "[0]\ttrain-logloss:0.639086\tvalid-logloss:0.640893\n",
+      "[0]\ttrain-logloss:0.637826\tvalid-logloss:0.640632\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[144]\ttrain-logloss:0.061494\tvalid-logloss:0.176276\n",
+      "[123]\ttrain-logloss:0.057447\tvalid-logloss:0.15677\n",
       "\n",
-      "[0]\ttrain-logloss:0.639907\tvalid-logloss:0.639867\n",
+      "[0]\ttrain-logloss:0.638514\tvalid-logloss:0.638195\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[137]\ttrain-logloss:0.066012\tvalid-logloss:0.111683\n",
+      "[68]\ttrain-logloss:0.095126\tvalid-logloss:0.131916\n",
       "\n",
-      "[0]\ttrain-logloss:0.639567\tvalid-logloss:0.640325\n",
+      "[0]\ttrain-logloss:0.637381\tvalid-logloss:0.640217\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[101]\ttrain-logloss:0.083687\tvalid-logloss:0.164728\n",
+      "[106]\ttrain-logloss:0.067367\tvalid-logloss:0.173205\n",
       "\n",
-      "[0]\ttrain-logloss:0.639895\tvalid-logloss:0.639507\n",
+      "[0]\ttrain-logloss:0.638221\tvalid-logloss:0.637046\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[84]\ttrain-logloss:0.094869\tvalid-logloss:0.16055\n",
+      "[58]\ttrain-logloss:0.102035\tvalid-logloss:0.164261\n",
       "\n",
-      "local average valid loss 0.166153132547 val loss std 0.0317077536741\n",
+      "local average valid loss 0.158168207773 val loss std 0.024238609388\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.020909\n",
-      "1  4023181e    0.893976\n",
-      "2  b20200e4    0.047755\n",
-      "3  e7f018bb    0.997828\n",
-      "4  4371c8c3    0.181071\n",
+      "0  5941774d    0.012918\n",
+      "1  4023181e    0.934378\n",
+      "2  b20200e4    0.022977\n",
+      "3  e7f018bb    0.998072\n",
+      "4  4371c8c3    0.271802\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.020419\n",
-      "1  4023181e    0.894793\n",
-      "2  b20200e4    0.051093\n",
-      "3  e7f018bb    0.997941\n",
-      "4  4371c8c3    0.181945\n"
+      "0  5941774d    0.012596\n",
+      "1  4023181e    0.937369\n",
+      "2  b20200e4    0.022207\n",
+      "3  e7f018bb    0.998189\n",
+      "4  4371c8c3    0.282147\n"
      ]
     }
    ],
