--- a/notebooks/prepare_other_feat.ipynb
+++ b/notebooks/prepare_other_feat.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
