--- a/notebooks/xgb_ensemble.ipynb
+++ b/notebooks/xgb_ensemble.ipynb
@@ -2,39 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'../features/vgg16_1_feat.pkl',\n",
-      "'../features/cnn_1_feat.pkl',\n",
-      "'../features/resnet_aug1_feat.pkl',\n",
-      "'../features/incept_aug1_feat.pkl',\n",
-      "'../features/other_feat.pkl',\n",
-      "'../features/incept_aug2_feat.pkl',\n",
       "'../features/cnn_1_aug1_feat.pkl',\n",
-      "'../features/resnet_1_feat.pkl',\n",
-      "'../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
-      "'../features/incept_aug4_feat.pkl',\n",
-      "'../features/resnet_aug4_feat.pkl',\n",
-      "'../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
-      "'../features/cnn_3_aug1_feat.pkl',\n",
+      "'../features/cnn_1_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_1_aug_skimage_denoise_feat.pkl',\n",
+      "'../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_1_feat.pkl',\n",
       "'../features/cnn_2_aug1_feat.pkl',\n",
-      "'../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_2_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/cnn_2_feat.pkl',\n",
+      "'../features/cnn_3_aug1_feat.pkl',\n",
+      "'../features/cnn_3_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_3_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/cnn_4_aug1_feat.pkl',\n",
       "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
+      "'../features/cnn_4_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_4_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/cnn_5_aug1_feat.pkl',\n",
+      "'../features/cnn_5_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_5_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
       "'../features/incept_1_feat.pkl',\n",
-      "'../features/resnet_aug3_feat.pkl',\n",
+      "'../features/incept_aug1_feat.pkl',\n",
+      "'../features/incept_aug1_fold8_feat.pkl',\n",
+      "'../features/incept_aug2_feat.pkl',\n",
       "'../features/incept_aug3_feat.pkl',\n",
-      "'../features/vgg_aug1_feat.pkl',\n",
-      "'../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/incept_aug4_feat.pkl',\n",
+      "'../features/other_feat.pkl',\n",
+      "'../features/resnet_1_feat.pkl',\n",
+      "'../features/resnet_aug1_feat.pkl',\n",
+      "'../features/resnet_aug1_fold8_feat.pkl',\n",
       "'../features/resnet_aug2_feat.pkl',\n",
-      "'../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n"
+      "'../features/resnet_aug3_feat.pkl',\n",
+      "'../features/resnet_aug4_feat.pkl',\n",
+      "'../features/vgg16_1_feat.pkl',\n",
+      "'../features/vgg_aug1_feat.pkl',\n",
+      "'../features/vgg_aug1_fold8_feat.pkl',\n",
+      "'../features/vgg_aug1_new_feat.pkl',\n",
+      "'../features/xception_aug1_feat.pkl',\n"
      ]
     }
    ],
@@ -45,55 +65,82 @@
     "import glob\n",
     "import pandas as pd\n",
     "\n",
-    "fl = glob.glob('../features/*.pkl')\n",
+    "fl = sorted(glob.glob('../features/*.pkl'))\n",
     "for l in fl:\n",
     "    print(\"'{}',\".format(l))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../features/vgg16_1_feat.pkl\n",
+      "../features/cnn_1_aug1_feat.pkl\n",
+      "../features/cnn_1_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_1_aug_skimage_preprocess_feat.pkl\n",
+      "../features/cnn_1_feat.pkl\n",
+      "../features/cnn_2_aug_rescale_preprocess_feat.pkl\n",
+      "../features/cnn_3_aug_skimage_preprocess_feat.pkl\n",
+      "../features/cnn_4_aug1_feat.pkl\n",
+      "../features/cnn_5_aug_skimage_preprocess_feat.pkl\n",
       "../features/incept_aug1_feat.pkl\n",
       "../features/other_feat.pkl\n",
-      "../features/cnn_1_aug1_feat.pkl\n",
-      "../features/resnet_1_feat.pkl\n",
-      "../features/cnn_2_aug1_feat.pkl\n",
-      "../features/cnn_4_aug1_feat.pkl\n",
-      "../features/resnet_aug3_feat.pkl\n",
-      "../features/resnet_aug2_feat.pkl\n",
-      "(1604, 19) (8424, 19) (1604,)\n"
+      "../features/resnet_aug1_feat.pkl\n",
+      "../features/vgg_aug1_feat.pkl\n",
+      "../features/vgg_aug1_new_feat.pkl\n",
+      "../features/xception_aug1_feat.pkl\n",
+      "(1604, 24) (8424, 24) (1604,)\n"
      ]
     }
    ],
    "source": [
     "choose_fl = [\n",
-    "#'../features/cnn_1_feat.pkl',\n",
-    "#'../features/resnet_aug1_feat.pkl',\n",
-    "#'../features/incept_aug2_feat.pkl',\n",
-    "#'../features/cnn_3_aug1_feat.pkl',\n",
-    "#'../features/cnn_2_feat.pkl',\n",
-    "#'../features/cnn_4_aug1_feat_add_early.pkl',\n",
-    "#'../features/cnn_5_aug1_feat.pkl',\n",
-    "#'../features/incept_1_feat.pkl',\n",
-    "#'../features/incept_aug3_feat.pkl',\n",
-    "#'../features/vgg_aug1_feat.pkl',\n",
-    "'../features/vgg16_1_feat.pkl',\n",
-    "'../features/incept_aug1_feat.pkl',\n",
-    "'../features/other_feat.pkl',\n",
-    "'../features/cnn_1_aug1_feat.pkl',\n",
-    "'../features/resnet_1_feat.pkl',\n",
-    "'../features/cnn_2_aug1_feat.pkl',\n",
-    "'../features/cnn_4_aug1_feat.pkl',\n",
-    "'../features/resnet_aug3_feat.pkl',\n",
-    "'../features/resnet_aug2_feat.pkl',\n",
-    "  \n",
+    " '../features/cnn_1_aug1_feat.pkl',\n",
+    "  '../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
+    "  '../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
+    "  '../features/cnn_1_feat.pkl',\n",
+    "#  '../features/cnn_2_aug1_feat.pkl',\n",
+    " '../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+    "# '../features/cnn_2_aug_skimage_preprocess_feat.pkl',\n",
+    "# '../features/cnn_2_feat.pkl',\n",
+    "# '../features/cnn_3_aug1_feat.pkl',\n",
+    "# '../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
+    "  '../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
+    "  '../features/cnn_4_aug1_feat.pkl',\n",
+    "# '../features/cnn_4_aug1_feat_add_early.pkl',\n",
+    "# '../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
+    "# '../features/cnn_4_aug_skimage_preprocess_feat.pkl',\n",
+    "# '../features/cnn_5_aug1_feat.pkl',\n",
+    "# '../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
+    " '../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
+    "# '../features/incept_1_feat.pkl',\n",
+    " '../features/incept_aug1_feat.pkl',\n",
+    "#    '../features/incept_aug1_fold8_feat.pkl',\n",
+    "# '../features/incept_aug2_feat.pkl',\n",
+    "# '../features/incept_aug3_feat.pkl',\n",
+    "# '../features/incept_aug4_feat.pkl',\n",
+    " '../features/other_feat.pkl',\n",
+    "# '../features/resnet_1_feat.pkl',\n",
+    " '../features/resnet_aug1_feat.pkl',\n",
+    "#    '../features/resnet_aug1_fold8_feat.pkl',\n",
+    "# '../features/resnet_aug2_feat.pkl',\n",
+    "# '../features/resnet_aug3_feat.pkl',\n",
+    "# '../features/resnet_aug4_feat.pkl',\n",
+    "# '../features/vgg16_1_feat.pkl',\n",
+    "  '../features/vgg_aug1_feat.pkl',\n",
+    "#    '../features/vgg_aug1_fold8_feat.pkl',\n",
+    " '../features/vgg_aug1_new_feat.pkl',\n",
+    " '../features/xception_aug1_feat.pkl',\n",
+    "    \n",
+    "#     '../features/cnn_1_aug_1_fold8_feat.pkl',\n",
+    "#     '../features/cnn_2_aug_1_fold8_feat.pkl',\n",
+    "#     '../features/cnn_3_aug_1_fold8_feat.pkl',\n",
+    "#     '../features/cnn_4_aug_1_fold8_feat.pkl',\n",
+    "#     '../features/cnn_5_aug_1_fold8_feat.pkl',\n",
     "]\n",
     "\n",
     "def load_x_y():\n",
@@ -116,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +196,7 @@
     "                'max_depth': 3,\n",
     "                'eval_metric':'logloss',\n",
     "                'objective':'binary:logistic',\n",
-    "                'scale_pos_weight': 1.0\n",
+    "                'scale_pos_weight': 0.85\n",
     "                }\n",
     "        \n",
     "        # def mat\n",
@@ -204,47 +251,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.639092\tvalid-logloss:0.643238\n",
+      "[0]\ttrain-logloss:0.638291\tvalid-logloss:0.641754\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[119]\ttrain-logloss:0.07035\tvalid-logloss:0.163011\n",
+      "[148]\ttrain-logloss:0.057178\tvalid-logloss:0.147421\n",
       "\n",
-      "[0]\ttrain-logloss:0.640488\tvalid-logloss:0.639944\n",
+      "[0]\ttrain-logloss:0.640175\tvalid-logloss:0.641784\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[81]\ttrain-logloss:0.098805\tvalid-logloss:0.165829\n",
+      "[148]\ttrain-logloss:0.057513\tvalid-logloss:0.164196\n",
       "\n",
-      "[0]\ttrain-logloss:0.640431\tvalid-logloss:0.64091\n",
+      "[0]\ttrain-logloss:0.638911\tvalid-logloss:0.641074\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[104]\ttrain-logloss:0.082493\tvalid-logloss:0.163925\n",
+      "[82]\ttrain-logloss:0.086634\tvalid-logloss:0.1604\n",
       "\n",
-      "local average valid loss 0.166895443887 val loss std 0.00172757630585\n",
+      "local average valid loss 0.158617205767 val loss std 0.0074899943135\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.039962\n",
-      "1  4023181e    0.787347\n",
-      "2  b20200e4    0.008393\n",
-      "3  e7f018bb    0.997585\n",
-      "4  4371c8c3    0.061940\n",
+      "0  5941774d    0.011994\n",
+      "1  4023181e    0.942573\n",
+      "2  b20200e4    0.261456\n",
+      "3  e7f018bb    0.998141\n",
+      "4  4371c8c3    0.744964\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.040202\n",
-      "1  4023181e    0.787793\n",
-      "2  b20200e4    0.008420\n",
-      "3  e7f018bb    0.997588\n",
-      "4  4371c8c3    0.062332\n"
+      "0  5941774d    0.011845\n",
+      "1  4023181e    0.940308\n",
+      "2  b20200e4    0.258570\n",
+      "3  e7f018bb    0.998138\n",
+      "4  4371c8c3    0.737194\n"
      ]
     }
    ],
@@ -254,167 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 104,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.639003\tvalid-logloss:0.643103\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[159]\ttrain-logloss:0.059304\tvalid-logloss:0.158494\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640624\tvalid-logloss:0.642576\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[217]\ttrain-logloss:0.047615\tvalid-logloss:0.124558\n",
-      "\n",
-      "[0]\ttrain-logloss:0.64019\tvalid-logloss:0.64249\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[128]\ttrain-logloss:0.072304\tvalid-logloss:0.178184\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640457\tvalid-logloss:0.640957\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[117]\ttrain-logloss:0.082179\tvalid-logloss:0.163715\n",
-      "\n",
-      "[0]\ttrain-logloss:0.641168\tvalid-logloss:0.64084\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[83]\ttrain-logloss:0.100543\tvalid-logloss:0.148211\n",
-      "\n",
-      "local average valid loss 0.157240193323 val loss std 0.0190074442874\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021014\n",
-      "1  4023181e    0.796910\n",
-      "2  b20200e4    0.015838\n",
-      "3  e7f018bb    0.998485\n",
-      "4  4371c8c3    0.050210\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021353\n",
-      "1  4023181e    0.797099\n",
-      "2  b20200e4    0.016643\n",
-      "3  e7f018bb    0.998503\n",
-      "4  4371c8c3    0.052756\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(5,42,True)"
+    "#cv_test(5,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.640299\tvalid-logloss:0.644735\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[148]\ttrain-logloss:0.066444\tvalid-logloss:0.176749\n",
-      "\n",
-      "[0]\ttrain-logloss:0.639776\tvalid-logloss:0.64181\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[185]\ttrain-logloss:0.058884\tvalid-logloss:0.144427\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640106\tvalid-logloss:0.641654\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[168]\ttrain-logloss:0.0634\tvalid-logloss:0.132382\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640288\tvalid-logloss:0.643088\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[191]\ttrain-logloss:0.056821\tvalid-logloss:0.113952\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640163\tvalid-logloss:0.643046\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[131]\ttrain-logloss:0.073937\tvalid-logloss:0.18924\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640484\tvalid-logloss:0.64197\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[220]\ttrain-logloss:0.050064\tvalid-logloss:0.135035\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640277\tvalid-logloss:0.641467\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[116]\ttrain-logloss:0.082653\tvalid-logloss:0.186062\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640989\tvalid-logloss:0.641694\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[84]\ttrain-logloss:0.104992\tvalid-logloss:0.129232\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640637\tvalid-logloss:0.639867\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[76]\ttrain-logloss:0.110037\tvalid-logloss:0.15026\n",
-      "\n",
-      "[0]\ttrain-logloss:0.640845\tvalid-logloss:0.639688\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[192]\ttrain-logloss:0.054263\tvalid-logloss:0.150098\n",
-      "\n",
-      "local average valid loss 0.154266612699 val loss std 0.0243853126574\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021957\n",
-      "1  4023181e    0.771701\n",
-      "2  b20200e4    0.019678\n",
-      "3  e7f018bb    0.998608\n",
-      "4  4371c8c3    0.054753\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021953\n",
-      "1  4023181e    0.768805\n",
-      "2  b20200e4    0.020650\n",
-      "3  e7f018bb    0.998646\n",
-      "4  4371c8c3    0.055951\n"
-     ]
-    }
-   ],
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "cv_test(10,42,True)"
+    "#cv_test(10,42,True)"
    ]
   }
  ],
