--- a/notebooks/cnn_x_data_aug_denoise.ipynb
+++ b/notebooks/cnn_x_data_aug_denoise.ipynb
@@ -68,7 +68,7 @@
     "        \n",
     "        img = np.dstack([r,g,b])\n",
     "        img = denoise_tv_chambolle(img,weight=0.2,multichannel=True)\n",
-    "        img = std_img(img)\n",
+    "        #img = std_img(img)\n",
     "        images.append(img)\n",
     "    return np.array(images)\n",
     "\n",
@@ -2526,7 +2526,7 @@
     "        print('============================')\n",
     "    return train_pred,test_pred\n",
     "\n",
-    "train_pred,test_pred = kfold_train(fold_cnt=5)"
+    "train_pred,test_pred = kfold_train(fold_cnt=3)"
    ]
   },
   {
@@ -4988,7 +4988,7 @@
     "        print('============================')\n",
     "    return train_pred,test_pred\n",
     "\n",
-    "train_pred,test_pred = kfold_train(fold_cnt=5)"
+    "train_pred,test_pred = kfold_train(fold_cnt=3)"
    ]
   },
   {
@@ -7459,7 +7459,7 @@
     "        print('============================')\n",
     "    return train_pred,test_pred\n",
     "\n",
-    "train_pred,test_pred = kfold_train(fold_cnt=5)"
+    "train_pred,test_pred = kfold_train(fold_cnt=3)"
    ]
   },
   {
@@ -9917,7 +9917,7 @@
     "        print('============================')\n",
     "    return train_pred,test_pred\n",
     "\n",
-    "train_pred,test_pred = kfold_train(fold_cnt=5)"
+    "train_pred,test_pred = kfold_train(fold_cnt=3)"
    ]
   },
   {
@@ -12393,7 +12393,7 @@
     "        print('============================')\n",
     "    return train_pred,test_pred\n",
     "\n",
-    "train_pred,test_pred = kfold_train(fold_cnt=5)"
+    "train_pred,test_pred = kfold_train(fold_cnt=3)"
    ]
   },
   {
