--- a/notebooks/cnn_x_data_aug_preprocess_skimage.ipynb
+++ b/notebooks/cnn_x_data_aug_preprocess_skimage.ipynb
@@ -75,7 +75,7 @@
     "        \n",
     "        img = np.dstack([r,g,b])\n",
     "        img = equalize_adapthist(img)\n",
-    "        img = std_img(img)\n",
+    "        #img = std_img(img)\n",
     "        images.append(img)\n",
     "    return np.array(images)\n",
     "\n",
