--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -243,165 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.637737\tvalid-logloss:0.641389\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[85]\ttrain-logloss:0.075987\tvalid-logloss:0.159165\n",
-      "\n",
-      "[0]\ttrain-logloss:0.63772\tvalid-logloss:0.639149\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[103]\ttrain-logloss:0.067981\tvalid-logloss:0.140546\n",
-      "\n",
-      "[0]\ttrain-logloss:0.63693\tvalid-logloss:0.638803\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[80]\ttrain-logloss:0.073215\tvalid-logloss:0.19237\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638264\tvalid-logloss:0.640832\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[120]\ttrain-logloss:0.056504\tvalid-logloss:0.145793\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637983\tvalid-logloss:0.640589\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[74]\ttrain-logloss:0.084062\tvalid-logloss:0.168754\n",
-      "\n",
-      "local average valid loss 0.163954727952 val loss std 0.0188310130132\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.013003\n",
-      "1  4023181e    0.922163\n",
-      "2  b20200e4    0.027677\n",
-      "3  e7f018bb    0.997675\n",
-      "4  4371c8c3    0.227791\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.013203\n",
-      "1  4023181e    0.921438\n",
-      "2  b20200e4    0.026823\n",
-      "3  e7f018bb    0.997715\n",
-      "4  4371c8c3    0.236289\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(5,42,True)"
+    "#cv_test(5,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.637348\tvalid-logloss:0.639638\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[104]\ttrain-logloss:0.065473\tvalid-logloss:0.178839\n",
-      "\n",
-      "[0]\ttrain-logloss:0.63846\tvalid-logloss:0.639136\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[128]\ttrain-logloss:0.05689\tvalid-logloss:0.145799\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638586\tvalid-logloss:0.641752\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[222]\ttrain-logloss:0.028512\tvalid-logloss:0.136012\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638349\tvalid-logloss:0.637826\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[191]\ttrain-logloss:0.037472\tvalid-logloss:0.113692\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637836\tvalid-logloss:0.640585\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[55]\ttrain-logloss:0.101005\tvalid-logloss:0.200728\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638405\tvalid-logloss:0.638111\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[105]\ttrain-logloss:0.070403\tvalid-logloss:0.153394\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637826\tvalid-logloss:0.640632\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[123]\ttrain-logloss:0.057447\tvalid-logloss:0.15677\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638514\tvalid-logloss:0.638195\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[68]\ttrain-logloss:0.095126\tvalid-logloss:0.131916\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637381\tvalid-logloss:0.640217\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[106]\ttrain-logloss:0.067367\tvalid-logloss:0.173205\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638221\tvalid-logloss:0.637046\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[58]\ttrain-logloss:0.102035\tvalid-logloss:0.164261\n",
-      "\n",
-      "local average valid loss 0.158168207773 val loss std 0.024238609388\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.012918\n",
-      "1  4023181e    0.934378\n",
-      "2  b20200e4    0.022977\n",
-      "3  e7f018bb    0.998072\n",
-      "4  4371c8c3    0.271802\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.012596\n",
-      "1  4023181e    0.937369\n",
-      "2  b20200e4    0.022207\n",
-      "3  e7f018bb    0.998189\n",
-      "4  4371c8c3    0.282147\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_test(10,42,True)"
+    "#cv_test(10,42,True)"
    ]
   }
  ],
